--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,37 +1,33 @@
-<%= form_with model: @user, url: user_password_path, method: :patch, class: 'registration-main', local: true do |f| %>
-<div class='form-wrap'>
-  <div class='form-header'>
-    <h1 class='form-header-text'>
-      パスワード再設定
-    </h1>
-  </div>
-
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">新しいパスワード</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
-    <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
-  </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">パスワード(確認)</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation" %>
-  </div>
-
-  <%# 隠しフィールドでトークンもパラメーターで送る。こうすることでDBに保存されているリセットトークンとここから送られたトークンが一致するか確認している。 %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="form-group">
-    <h2 class='form-bottom-text'>
-      よろしければ以下のボタンを押してください
-    </h2>
-  </div>
-  <div class='register-btn'>
-    <%= f.submit "パスワードを変更する" ,class:"register-red-btn" %>
+<div class="box">
+  <div class="box-inner">
+    <%= react_component("PageTitle", { title: "パスワード再設定(利用者)" }) %>
+    <%= render "users/shared/error_messages", resource: resource %>
+    <%= form_with model: @user, url: user_password_path, method: :patch, class: 'registration-main', local: true do |f| %>
+      <div class="password-cation">
+        <p>以下より新しく設定したいパスワードを入力してください</p>
+      </div>
+      <div class="form-group">
+        <div class="form-text-wrap">
+          <%= f.label :password, class: "form-text" %>
+        </div>
+        <%= f.password_field :password, class: "form-control input-default", id: "password", placeholder: "6文字以上の半角英数字" %>
+        <p class="info-text">※英字と数字の両方を含めて設定してください</p>
+      </div>
+      <div class="form-group">
+        <div class="form-text-wrap">
+          <%= f.label :password_confirmation, class: "form-text" %>
+        </div>
+        <%= f.password_field :password_confirmation, class: "form-control input-default", id: "password-confirmation" %>
+      </div>
+      <%= f.hidden_field :reset_password_token %>
+      <div class="form-group">
+        <p class="form-bottom-text">
+          よろしければ以下のボタンを押してください
+        </p>
+      </div>
+      <div class="register-btn">
+        <%= f.submit "パスワードを変更する", class: "btn btn-warning" %>
+      </div>
+    <% end %>
   </div>
 </div>
-<% end %>
