--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -1,25 +1,25 @@
 <div class = "box">
   <div class = "box-inner">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "users/shared/error_messages", resource: resource %>
+      <%= render "admins/shared/error_messages", resource: resource %>
       <%= react_component("PageTitle", { title: "会員登録(管理者)" }) %>
       <div class="box-email">
-        <%= f.label :email, "メールアドレス" %><br />
+        <%= f.label :email, "メールアドレス" %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
       <div class="box-password">
         <%= f.label :password, "パスワード" %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> 文字以上)</em>
-        <% end %><br />
+        <% end %>
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
       <div class="box-confirm">
-        <%= f.label :password_confirmation, "パスワード（確認）" %><br />
+        <%= f.label :password_confirmation, "パスワード（確認）" %>
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
       <div class="box-admin-id">
-        <%= f.label :project_id, "マネジメントID" %><br />
+        <%= f.label :project_id, "マネジメントID" %>
         <%= f.text_field :project_id, autocomplete: "project_id" %>
       </div>
       <div class="actions">
